--- a/Aight/app/src/main/res/layout/activity_maps_view.xml
+++ b/Aight/app/src/main/res/layout/activity_maps_view.xml
@@ -1,4 +1,5 @@
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsView"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
+    android:id="@+id/map"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:name="com.google.android.gms.maps.MapFragment"/>
