added custom 'current location' button. improved material design

--- a/Aight/app/src/main/res/values/colors.xml
+++ b/Aight/app/src/main/res/values/colors.xml
@@ -2,9 +2,7 @@
 <resources>
     <color name="White">#fff</color>
     <color name="washed_orange">#ffd6a4</color>
-    <color name="ColorPrimary">#4caf50</color>
     <color name="blue">#2196f3</color>
-    <color name="ColorBG">#f28500</color>
-    <color name="ColorSB">#d97700</color>
-    <color name="ColorPrimaryDark">#2a7616</color>
+    <color name="ColorPrimary">#f28500</color>
+    <color name="ColorPrimaryDark">#d97700</color>
 </resources>
