--- a/Aight/app/src/main/res/layout/activity_create_event.xml
+++ b/Aight/app/src/main/res/layout/activity_create_event.xml
@@ -6,7 +6,7 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nl.mprog.rutger.aight.CreateEvent"
-    android:background="@color/ColorBG"
+    android:background="@color/ColorPrimary"
     android:weightSum="1">
 
     <TextView android:text="@string/description" android:layout_width="wrap_content"
@@ -18,7 +18,7 @@
         android:layout_gravity="end"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="16sp" android:textColor="@color/White"/>
+        android:textSize="16sp" android:textColor="@color/washed_orange"/>
 
     <EditText
         android:inputType="textMultiLine"
