--- a/Aight/app/src/main/res/layout/activity_maps.xml
+++ b/Aight/app/src/main/res/layout/activity_maps.xml
@@ -10,17 +10,34 @@
         android:name="com.google.android.gms.maps.SupportMapFragment" />
 
     <ImageButton
+        android:id="@+id/fablocate"
+        android:src="@drawable/ic_locate"
+        android:layout_width="64sp"
+        android:layout_height="64sp"
+        android:layout_marginRight="12sp"
+        android:layout_marginEnd="100sp"
+        android:layout_marginBottom="100sp"
+        android:layout_gravity="bottom|end"
+        android:scaleType="fitXY"
+        android:tint="@android:color/black"
+        android:elevation="10sp"
+        android:background="@drawable/circle"
+        android:onClick="doLocate"/>
+
+    <ImageButton
+        android:id="@+id/fabcreate"
         android:src="@drawable/ic_action"
         android:layout_width="64sp"
         android:layout_height="64sp"
+        android:layout_marginRight="12sp"
+        android:layout_marginEnd="20sp"
+        android:layout_marginBottom="20sp"
         android:layout_gravity="bottom|end"
-        android:layout_marginRight="16sp"
-        android:layout_marginEnd="16sp"
-        android:layout_marginBottom="16sp"
-        android:tint="@android:color/black"
-        android:id="@+id/fab"
+        android:scaleType="fitXY"
+        android:tint="@color/blue"
         android:elevation="10sp"
         android:background="@drawable/circle"
         android:onClick="goCreateEvent"/>
+
 
 </FrameLayout>
