--- a/Aight/app/src/main/res/layout/activity_maps.xml
+++ b/Aight/app/src/main/res/layout/activity_maps.xml
@@ -12,12 +12,12 @@
     <ImageButton
         android:id="@+id/fablocate"
         android:src="@drawable/ic_locate"
-        android:layout_width="64sp"
-        android:layout_height="64sp"
+        android:layout_width="48sp"
+        android:layout_height="48sp"
         android:layout_marginRight="12sp"
-        android:layout_marginEnd="100sp"
-        android:layout_marginBottom="100sp"
-        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="12sp"
+        android:layout_marginTop="32sp"
+        android:layout_gravity="top|end"
         android:scaleType="fitXY"
         android:tint="@color/MapsBlue"
         android:elevation="10sp"
