Parse login, signup and logout functionality

--- a/Aight/app/src/main/res/layout/activity_welcome.xml
+++ b/Aight/app/src/main/res/layout/activity_welcome.xml
@@ -25,7 +25,7 @@
         android:textSize="32sp"
         android:textColor="@color/White"
         android:padding="16sp"
-        android:onClick="goMapsView"/>
+        android:onClick="goLogIn"/>
 
     <Button
         android:id="@+id/signupbutton"
@@ -38,5 +38,5 @@
         android:textSize="32sp"
         android:textColor="@color/White"
         android:padding="16sp"
-        android:onClick="goMapsView"/>
+        android:onClick="goSignUp"/>
 </LinearLayout>
