--- a/Aight/app/src/main/res/layout/activity_maps.xml
+++ b/Aight/app/src/main/res/layout/activity_maps.xml
@@ -9,6 +9,23 @@
         android:layout_height="match_parent" android:id="@+id/map" tools:context=".MapsActivity"
         android:name="com.google.android.gms.maps.SupportMapFragment"/>
 
+    <Button
+        android:id="@+id/fablogout"
+        android:text="@string/log_out"
+        android:textSize="8sp"
+        android:layout_width="48sp"
+        android:layout_height="48sp"
+        android:layout_marginLeft="12sp"
+        android:layout_marginStart="12sp"
+        android:layout_marginTop="32sp"
+        android:layout_gravity="top|start"
+        android:scaleType="fitXY"
+        android:tint="@color/MapsBlue"
+        android:elevation="10sp"
+        android:background="@drawable/circle"
+        android:onClick="logOut"/>
+
+
     <ImageButton
         android:id="@+id/fablocate"
         android:src="@drawable/ic_locate"
