--- a/Aight/app/src/main/res/layout/activity_maps.xml
+++ b/Aight/app/src/main/res/layout/activity_maps.xml
@@ -20,8 +20,8 @@
         android:layout_marginTop="32sp"
         android:layout_gravity="top|start"
         android:scaleType="fitXY"
-        android:tint="@color/MapsBlue"
         android:elevation="10sp"
+        android:alpha="0.5"
         android:background="@drawable/circle"
         android:onClick="logOut"/>
 
@@ -38,6 +38,7 @@
         android:scaleType="fitXY"
         android:tint="@color/MapsBlue"
         android:elevation="10sp"
+        android:alpha="0.8"
         android:background="@drawable/circle"
         android:onClick="doLocate"/>
 
