--- a/Aight/app/src/main/res/layout/activity_create_event.xml
+++ b/Aight/app/src/main/res/layout/activity_create_event.xml
@@ -21,7 +21,7 @@
         android:textSize="16sp" android:textColor="@color/washed_orange"/>
 
     <EditText
-        android:inputType="text"
+        android:inputType="textCapSentences"
         android:textColor="@color/White"
         android:id="@+id/event_description"
         android:layout_width="fill_parent"
