--- a/Aight/app/src/main/res/layout/activity_log_in.xml
+++ b/Aight/app/src/main/res/layout/activity_log_in.xml
@@ -18,7 +18,7 @@
         android:hint="@string/username"
         android:textColorHint="@color/washed_orange"
         android:textColor="@color/White"
-        android:inputType="textEmailAddress"
+        android:inputType="textCapSentences"
         android:maxLines="1"
         android:singleLine="true"
         android:backgroundTint="@color/Green"/>
