--- a/Aight/app/src/main/res/drawable/circle.xml
+++ b/Aight/app/src/main/res/drawable/circle.xml
@@ -95,26 +95,16 @@
         </layer-list>
     </item>
 
-    <item >
+    <item android:background="?attr/selectableItemBackground">
 
-        <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-            android:color="?android:colorControlHighlight">
-            <item android:id="@android:id/mask">
-                <shape android:shape="oval">
-                    <solid android:color="#FFBB00" />
-                </shape>
-            </item>
-            <item>
-                <shape android:shape="oval">
+        <shape android:shape="oval">
+            <solid android:color="#FFF" />
+        </shape>
 
-                    <solid android:color="@color/White" />
-
-
-                </shape>
-            </item>
-        </ripple>
+        <shape android:shape="oval">
+            <solid android:color="@color/White" />
+        </shape>
 
     </item>
-
 
 </layer-list>
