--- a/Aight/app/src/main/res/drawable/circleblue.xml
+++ b/Aight/app/src/main/res/drawable/circleblue.xml
@@ -95,25 +95,19 @@
         </layer-list>
     </item>
 
-    <item >
+    <item android:background="?attr/selectableItemBackground">
+        <shape android:shape="oval">
+            <solid android:color="#FFBB00" />
+        </shape>
+    </item>
+    <item>
+        <shape android:shape="oval"
+            android:background="?attr/selectableItemBackground">
 
-        <ripple xmlns:android="http://schemas.android.com/apk/res/android"
-            android:color="?android:colorControlHighlight">
-            <item android:id="@android:id/mask">
-                <shape android:shape="oval">
-                    <solid android:color="#FFBB00" />
-                </shape>
-            </item>
-            <item>
-                <shape android:shape="oval">
-
-                    <solid android:color="@color/MapsBlue" />
+            <solid android:color="@color/MapsBlue" />
 
 
-                </shape>
-            </item>
-        </ripple>
-
+        </shape>
     </item>
 
 
