--- a/Aight/app/src/main/res/layout/activity_welcome.xml
+++ b/Aight/app/src/main/res/layout/activity_welcome.xml
@@ -5,7 +5,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="nl.mprog.rutger.aight.Welcome"
+    tools:context="nl.mprog.rutger.aight.WelcomeActivity"
     android:background="@color/ColorPrimary"
     android:weightSum="1">
 
